@@ -1,4 +1,8 @@
 2010-05-10
+ Added syntax token cv for variable list+code combination.
+ Added a check for malformed argument list to a proc.
+
+2010-05-10
  Cleaned up code syntax tokens. Renamed C to cg for global context.
  Made cn work reasonably. Added tests for cg, cn and cl.
 
